loki/deployment.yaml
# create a file named loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      #serviceAccountName: loki-service-account
      containers:
        - name: loki
          image: grafana/loki:latest
          args:
            - -config.file=/etc/loki/config.yaml
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki
            - name: loki-pv
              mountPath: /var/lib/loki/data
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-pv
          persistentVolumeClaim:
            claimName: loki-pv-claim
