loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  labels:
    app: loki
spec:
  ports:
    - port: 80
      targetPort: 3100
  selector:
    app: loki
  type: ClusterIP
