loki/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki-service
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`loki.mw.local`)
    priority: 10
    services:
    - name: loki-service
      port: 80
